Cleans up the window loading, and fixes some layout bugs

--- a/acme_site/static/css/tile.css
+++ b/acme_site/static/css/tile.css
@@ -57,7 +57,7 @@
 .wrapper {
     height: 80vh;
     width:100%;
-    margin-left: 10px;
+    margin-left: 5px;
 }
 
 
